Fix styling for sup and sub, add spacing to the sponsor title

--- a/assets/styles/base/_typography.scss
+++ b/assets/styles/base/_typography.scss
@@ -69,6 +69,16 @@ pre {
   background-color: var(--color--font);
 }
 
+//see https://css-tricks.com/snippets/css/prevent-superscripts-and-subscripts-from-affecting-line-height/
+sup, sub {
+  vertical-align: baseline;
+  position: relative;
+  top: -.4em;
+}
+sub { 
+  top: .4em; 
+}
+
 p {
   margin: 0 0 spacing(.5);
 
